header, main-info stylization

--- a/source/sass/blocks/_button.scss
+++ b/source/sass/blocks/_button.scss
@@ -21,3 +21,9 @@
 .button--pink {
   background-color: $accent-color-3;
 }
+
+@media (max-width: $mobile-full-width) {
+  .button {
+    padding: 12px 23px;
+  }
+}
