--- a/source/sass/blocks/_main-info.scss
+++ b/source/sass/blocks/_main-info.scss
@@ -1,10 +1,12 @@
 .main-info {
   max-width: $desktop-full-width;
+  margin: 0 auto;
   background-image: url("../img/main-bg-desktop.png");
   background-repeat: no-repeat;
   background-position: 0 0;
   padding-top: 127px;
   padding-bottom: 171px;
+  background-size: cover;
 }
 
 .main-info__wrapper {
@@ -37,13 +39,29 @@
 }
 
 @media (max-width: $tablet-full-width) {
+  .main-info {
+    padding-top: 83px;
+    padding-bottom: 134px;
+    background-image: url("../img/main-bg-tablet.png");
+  }
+
   .main-info__wrapper {
     padding-left: 5.86%;
     padding-right: 5.86%;
   }
+
+  .main-info p {
+    width: 57%;
+  }
 }
 
 @media (max-width: $mobile-full-width) {
+  .main-info {
+    padding-top: 57px;
+    padding-bottom: 56px;
+    background-image: url("../img/main-bg-mobile.png");
+  }
+
   .main-info__wrapper {
     padding-left: 7.8%;
     padding-right: 7.8%;
@@ -54,6 +72,13 @@
   }
 
   .main-info b {
+    margin-bottom: 11px;
     font-size: $font-size-mobile-m;
+  }
+
+  .main-info p {
+    width: 84%;
+    line-height: 1.45;
+    margin-bottom: 25px;
   }
 }
