--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,3 +15,5 @@
 @import "blocks/social-list";
 @import "blocks/page-footer";
 @import "blocks/main-nav";
+@import "blocks/top-list";
+@import "blocks/bottom-list";
