--- a/source/sass/utils/_variables.scss
+++ b/source/sass/utils/_variables.scss
@@ -11,6 +11,7 @@ $main-color: #122659;
 $accent-color-1: #ffd787;
 $accent-color-2: #8dd9e5;
 $accent-color-3: #feb9cc;
+$border-color: #000000;
 
 $font-size-desktop-s: 16px;
 $font-size-desktop-m: 18px;
@@ -26,6 +27,7 @@ $font-size-mobile-m: 16px;
 $font-size-mobile-s: 14px;
 
 $line-height-s: 1.2;
+$line-height-m: 1.4;
 
 $desktop-full-width: 1366px;
 $tablet-full-width: 1023px;
