--- a/source/sass/blocks/_education.scss
+++ b/source/sass/blocks/_education.scss
@@ -1,5 +1,12 @@
 .education {
   max-width: $desktop-full-width;
+  padding-top: 123px;
+  background-image: url("../img/girl-laughting.png"),
+    url("../img/rocket-icon.svg"),
+    url("../img/girl-icon.svg");
+  background-repeat: no-repeat, no-repeat, no-repeat;
+  background-position: 50% 81.4%, 87.5% 5.5%, 2% 22%;
+  margin-bottom: 88px;
 }
 
 .education__wrapper {
@@ -13,6 +20,8 @@
   font-size: $font-size-desktop-h2;
   font-family: $second-font;
   font-weight: 500;
+  text-align: center;
+  margin-bottom: 65px;
 }
 
 .education h3 {
@@ -20,6 +29,7 @@
   padding: 0;
   font-weight: 500;
   font-size: $font-size-desktop-h3;
+  margin-bottom: 20px;
 }
 
 .education__top-list {
@@ -37,16 +47,47 @@
 .education p {
   margin: 0;
   padding: 0;
+  line-height: 1.45;
+}
+
+.education video {
+  width: 430px;
+  height: 229px;
+  border: 1px solid $border-color;
+  border-radius: 14px;
+  margin-top: 5px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 @media (max-width: $tablet-full-width) {
+  .education {
+    padding-top: 103px;
+    background-image: url("../img/girl-laughting-tablet.png"),
+      url("../img/rocket-icon.svg");
+    background-position: 53.7% 84.7%, 93% 4.7%;
+    background-size: auto, 101px 50px;
+  }
+
   .education__wrapper {
     padding-left: 5.86%;
     padding-right: 5.86%;
   }
 
+  .education video {
+    width: 354px;
+    height: 260px;
+    // border: none;
+    box-shadow: none;
+  }
+
+  .education h2 {
+    margin-bottom: 32px;
+  }
+
   .education h3 {
     font-size: $font-size-tablet-m;
+    margin-bottom: 19px;
+    line-height: $line-height-m;
   }
 
   .education p {
