--- a/source/sass/blocks/_page-header.scss
+++ b/source/sass/blocks/_page-header.scss
@@ -21,6 +21,8 @@
   padding: 0;
   width: 24px;
   height: 18px;
+  background-color: transparent;
+  border: none;
 }
 
 @media (max-width: $tablet-full-width) {
