--- a/source/sass/utils/_variables.scss
+++ b/source/sass/utils/_variables.scss
@@ -27,7 +27,9 @@ $font-size-mobile-m: 16px;
 $font-size-mobile-s: 14px;
 
 $line-height-s: 1.2;
+$line-height-sm: 1.25;
 $line-height-m: 1.4;
+$line-height-mm: 1.45;
 
 $desktop-full-width: 1366px;
 $tablet-full-width: 1023px;
