--- a/source/sass/blocks/_education.scss
+++ b/source/sass/blocks/_education.scss
@@ -1,5 +1,6 @@
 .education {
   max-width: $desktop-full-width;
+  margin: 0 auto;
   padding-top: 123px;
   background-image: url("../img/girl-laughting.png"),
     url("../img/rocket-icon.svg"),
