--- a/source/sass/blocks/_groups.scss
+++ b/source/sass/blocks/_groups.scss
@@ -1,10 +1,12 @@
 .groups {
   max-width: $desktop-full-width;
+  margin: 0 auto;
   padding-top: 176px;
   padding-bottom: 184px;
-  background-image: url("../img/price-bg-desktop.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
+  background-image: url("../img/star-icon.svg"),
+    url("../img/price-bg-desktop.svg");
+  background-repeat: no-repeat, no-repeat;
+  background-position: 10.2% 15.3%, 0 0;
 }
 
 .groups__wrapper {
