--- a/source/sass/blocks/_teachers.scss
+++ b/source/sass/blocks/_teachers.scss
@@ -1,10 +1,28 @@
 .teachers {
   max-width: $desktop-full-width;
+  margin: 0 auto;
+  padding-top: 125px;
+  padding-bottom: 89px;
+  background-image: url("../img/house-icon.svg"),
+    url("../img/pencil-icon.svg");
+  background-position: 92.5% 19%, 4% 78.5%;
+  background-repeat: no-repeat, no-repeat;
 }
 
 .teachers__wrapper {
   padding-left: 14.5%;
   padding-right: 14.5%;
+}
+
+.teachers__top {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 51px;
+}
+
+.teachers__top p {
+  width: 36.2%;
+  line-height: 1.45;
 }
 
 .teachers h2 {
@@ -24,11 +42,35 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 36px;
 }
 
 .teachers__list b {
   font-weight: 500;
   font-size: $font-size-desktop-h3;
+  margin-bottom: 6px;
+}
+
+.teachers__list-item {
+  width: 23%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.teachers__list-item--hide {
+  display: none;
+}
+
+.teachers img {
+  margin-bottom: 17px;
+}
+
+.teachers__buttons {
+  text-align: center;
+  margin-bottom: 36px;
 }
 
 @media (max-width: $tablet-full-width) {
