add tablet stylization

--- a/source/sass/_global.scss
+++ b/source/sass/_global.scss
@@ -1,5 +1,5 @@
 html {
-  background-color: $main-background-color;
+  background-color: $second-background-color;
   font-family: $main-font;
   color: $main-color;
   font-size: $font-size-desktop-s;
