--- a/source/sass/utils/_variables.scss
+++ b/source/sass/utils/_variables.scss
@@ -1,4 +1,5 @@
 $main-background-color: #ffffff;
+$second-background-color: #fefcfa;
 
 $main-font: "Montserrat",
   "Arial",
@@ -12,6 +13,7 @@ $accent-color-1: #ffd787;
 $accent-color-2: #8dd9e5;
 $accent-color-3: #feb9cc;
 $border-color: #000000;
+$bg-color: #f7fafc;
 
 $font-size-desktop-s: 16px;
 $font-size-desktop-m: 18px;
