--- a/source/sass/blocks/_booking.scss
+++ b/source/sass/blocks/_booking.scss
@@ -1,18 +1,40 @@
 .booking {
-  max-width: $desktop-full-width;
+  position: relative;
   margin: 0 auto;
+  margin-bottom: 130px;
   padding-top: 93px;
   text-align: center;
-  background-image: url("../img/rainbow-icon.svg"),
-    url("../img/boy-icon.svg"),
-    url("../img/booking-bd-desktop.svg");
-  background-repeat: no-repeat, no-repeat, no-repeat;
-  background-position: 12.2% 30.6%, 80.1% 47%, 0 0;
+}
+
+.booking::before {
+  content: "";
+  position: absolute;
+  width: 183px;
+  height: 156px;
+  background-image: url("../img/rainbow-icon.svg");
+  background-repeat: no-repeat;
+  left: 10.5%;
+  top: 19.5%;
+  z-index: 7;
+}
+
+.booking::after {
+  content: "";
+  position: absolute;
+  width: 118px;
+  height: 133px;
+  background-image: url("../img/boy-icon.svg");
+  background-repeat: no-repeat;
+  left: 73.5%;
+  top: 33%;
+  z-index: 8;
 }
 
 .booking__wrapper {
   padding-left: 32%;
   padding-right: 32%;
+  position: relative;
+  z-index: 5;
 }
 
 .booking h2 {
@@ -36,14 +58,69 @@
   margin-bottom: 101px;
 }
 
+.booking svg {
+  position: absolute;
+  width: 100%;
+  top: 0;
+}
+
+.booking__desktop-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.booking__tablet-bg {
+  display: none;
+}
+
+.booking__mobile-bg {
+  display: none;
+}
+
 @media (max-width: $tablet-full-width) {
+  .booking {
+    padding-top: 112px;
+  }
+
   .booking__wrapper {
-    padding-left: 18.35%;
-    padding-right: 18.35%;
+    padding-left: 18.5%;
+    padding-right: 17.5%;
   }
 
   .booking p {
     font-size: $font-size-tablet-s;
+    padding: 0 75px;
+    margin-bottom: 30px;
+  }
+
+  .booking__desktop-bg {
+    display: none;
+  }
+
+  .booking__tablet-bg {
+    display: block;
+  }
+
+  .booking h2 {
+    margin-bottom: 14px;
+  }
+
+  .booking__button {
+    padding: 13px 29px;
+    margin-left: -2%;
+  }
+
+  .booking::before {
+    background-size: 125px 108px;
+    left: 2%;
+    top: 44.5%;
+  }
+
+  .booking::after {
+    background-size: 78px 89px;
+    left: 83.5%;
+    top: 37%;
   }
 }
 
