--- a/source/sass/blocks/_page-footer.scss
+++ b/source/sass/blocks/_page-footer.scss
@@ -1,10 +1,14 @@
 .page-footer {
-  max-width: $desktop-full-width;
+  padding: 36px 0;
 }
 
 .page-footer__wrapper {
-  padding-left: 14.5%;
-  padding-right: 14.5%;
+  padding-left: 14%;
+  padding-right: 14%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
 }
 
 .page-footer p {
@@ -20,6 +24,10 @@
   .page-footer__wrapper {
     padding-left: 5.86%;
     padding-right: 5.86%;
+    flex-direction: row;
+    align-items: flex-start;
+    font-size: $font-size-tablet-s;
+    line-height: $line-height-m;
   }
 }
 
