--- a/source/sass/blocks/_teachers.scss
+++ b/source/sass/blocks/_teachers.scss
@@ -1,6 +1,5 @@
 .teachers {
   max-width: $desktop-full-width;
-  margin: 0 auto;
   padding-top: 125px;
   padding-bottom: 89px;
   background-image: url("../img/house-icon.svg"),
@@ -69,18 +68,62 @@
 }
 
 .teachers__buttons {
-  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
   margin-bottom: 36px;
+  width: 41px;
+}
+
+.teachers button {
+  width: 22px;
+  margin-left: -11px;
 }
 
 @media (max-width: $tablet-full-width) {
+  .teachers {
+    padding-top: 106px;
+    padding-bottom: 67px;
+    background-image: none;
+  }
+
   .teachers__wrapper {
     padding-left: 5.86%;
     padding-right: 5.86%;
   }
 
+  .teachers__list {
+    margin-bottom: 27px;
+  }
+
+  .teachers__slider {
+    overflow: hidden;
+    width: 100%;
+  }
+
+  .teachers__list-item {
+    width: 205px;
+    margin-right: 31px;
+    flex-shrink: 0;
+  }
+
+  .teachers h2 {
+    width: 30%;
+    margin-top: -2px;
+  }
+
+  .teachers__top {
+    margin-bottom: 42px;
+  }
+
+  .teachers__top p {
+    font-size: $font-size-tablet-s;
+    width: 39.5%;
+  }
+
   .teachers__list b {
     font-size: $font-size-tablet-m;
+    margin-bottom: 4px;
   }
 }
 
